# raylib-gamejam-template

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build_linux.yml  build_macos.yml  build_webassembly.yml  build_windows.yml  linux.yml  macos.yml  webassembly.yml  windows.yml
cmake/: CPM.cmake  PreventInSourceBuilds.cmake
libs/: CMakeLists.txt
libs/raylib/: CMakeLists.txt
projects/VS2022/raylib/: raylib.vcxproj
projects/VS2022/raylib_game/: raylib_game.vcxproj
projects/VSCode/: main.code-workspace
src/: CMakeLists.txt  Info.plist  Makefile  Makefile.Android  raylib_game.c  raylib_game.rc
src/resources/: README.txt
